[package]
name = "arteria"
version = "0.1.0"
authors = ["Mikazuki <mikazuki_fuyuno@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "arteria"
path = "src/main.rs"

[dependencies]
actix-web = "2"
actix-rt= "1"
bollard = "0.4"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.9"
env_logger = "0.6"
futures = "0.3"
secstr = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
